@@ -2,14 +2,14 @@
 (function(global) {
 
   // private vars
-  var DOCUMENT_FRAGMENT_NODE, DOCUMENT_NODE, ELEMENT_NODE, Fuse, Bug, Class,
-   Data, Document, Element, Enumerable, Feature, Form, Func, Obj, Node, NodeList,
-   RawList, $break, _extend, addListMethods, bind, capitalize, clone, concatList,
-   defer, eachKey, emptyFunction, escapeRegExpChars, expando,fromElement,
-   getDocument, getNodeName, getWindow, hasKey, inspect, isArray, isElement,
-   isEmpty, isHash, isHostObject, isFunction, isNumber, isPrimitive, isRegExp,
-   isSameOrigin, isString, isUndefined, K, nil, prependList, returnOffset, slice,
-   toInteger, toString, undef, userAgent;
+  var DOCUMENT_FRAGMENT_NODE, DOCUMENT_NODE, ELEMENT_NODE, TEXT_NODE, Fuse, Bug,
+   Class, Data, Document, Element, Enumerable, Feature, Form, Func, Obj, Node,
+   NodeList, RawList, $break, _extend, addListMethods, bind, capitalize, clone,
+   concatList, defer, eachKey, emptyFunction, escapeRegExpChars, expando,
+   fromElement, getDocument, getNodeName, getWindow, hasKey, inspect, isArray,
+   isElement, isEmpty, isHash, isHostObject, isFunction, isNumber, isPrimitive,
+   isRegExp, isSameOrigin, isString, isUndefined, K, nil, prependList,
+   returnOffset, slice, toInteger, toString, undef, userAgent;
 
   Fuse =
   global.Fuse = function Fuse() { };
@@ -86,11 +86,14 @@
   // global.document.createDocumentFragment() nodeType
   DOCUMENT_FRAGMENT_NODE = 11;
 
-  // global.document nodeType
+  // global.document node type
   DOCUMENT_NODE = 9;
 
-  // element nodeType
+  // element node type
   ELEMENT_NODE = 1;
+
+  // textNode type
+  TEXT_NODE = 3;
 
   // a unqiue 15 char id used throughout Fuse
   expando = '_fuse' + String(+new Date).slice(0, 10);
